@@ -7,8 +7,9 @@ DESCRIPTION
     made to the repository. This directory can either be on the same box as
     the repository itself, or it can be remote.
 
-    NEW in version 0.03401
+    NEW in version 0.03402
 	- correct test failures due to lack of svnadmin executable in path
+	- bail out if svnnotify is not found either
 
     NEW in version 0.033 is:
 	- API change in SVN::Notify 0.62
